apps/playerok/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: playerok
  annotations:
    argocd.argoproj.io/sync-options: Force=false,Replace=false
    devflux.io/migration: legacy-selector-v0.46.3
  labels:
    app: frontend
    environment: prod
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: prod
  template:
    metadata:
      labels:
        app: frontend
        environment: prod
        component: frontend
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: frontend
          image: harbor.devflux.ru/playerok-devflux/frontend-prod:v0.46.3-beta-only.1-sha.c4b928316bcd
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
