apps/playerok/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
    environment: prod
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
