apps/playerok/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
    environment: prod
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
